alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,9 +298,8 @@ section {
 .wave2 {
   background: #f5f8fd;
   visibility: hidden;
-  padding: 100px 0;
+  padding: 50px 0 100px 0;
 }
-
 .show1 {
   visibility: visible;
   opacity: 0;
@@ -332,7 +331,6 @@ section {
 }
 .member img {
   width: 150px;
-  height: 150px;
   border-radius: 50%;
   border: 8px solid #149ddd;
   margin-bottom: 1rem;
